--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "watch:storybook": "start-storybook -p 6006 --host localhost"
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-transition-group": "^4.4.5",
-    "@types/react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -40,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.1",
+    "@vitest/coverage-c8": "^0.27.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
     "c8": "^7.12.0",
