--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test": "vitest run",
     "watch": "vitest watch",
+    "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "update-dependencies": "npx -y npm-check-updates -u",
     "storybook": "concurrently \"yarn:watch:*\"",
@@ -37,10 +38,12 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.1",
     "@vitest/coverage-c8": "^0.27.1",
+    "@vitest/ui": "^0.27.2",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
     "c8": "^7.12.0",
@@ -57,6 +60,7 @@
     "eslint-plugin-unicorn": "^45.0.2",
     "husky": "^8.0.3",
     "postcss": "^8.4.20",
+    "react-test-renderer": "^18.2.0",
     "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.2.4",
     "typescript": "*",
