--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-transition-group": "^4.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
