--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "husky": "^8.0.3",
     "postcss": "^8.4.20",
     "react-test-renderer": "^18.2.0",
+    "storybook-addon-react-router-v6": "^0.2.1",
     "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.2.4",
     "typescript": "*",
