--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "watch:storybook": "start-storybook -p 6006 --host localhost"
   },
   "dependencies": {
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
     "@types/react-transition-group": "^4.4.5",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
