--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "./tailwind.config.cjs"],
   "references": [
     {
       "path": "./tsconfig.node.json"
