chore: install dependencies & config lint

--- a/fe-react/.eslintrc.json
+++ b/fe-react/.eslintrc.json
@@ -17,7 +17,7 @@
     },
     "ecmaVersion": 12,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./fe-react/tsconfig.json"
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "unicorn"],
   "rules": {
