--- a/fe-react/package.json
+++ b/fe-react/package.json
@@ -25,12 +25,16 @@
   "dependencies": {
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-transition-group": "^4.4.5",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.7.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -43,7 +47,9 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.1",
@@ -66,6 +72,7 @@
     "husky": "^8.0.3",
     "postcss": "^8.4.20",
     "react-test-renderer": "^18.2.0",
+    "redux-logger": "^3.0.6",
     "storybook-addon-react-router-v6": "^0.2.1",
     "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.2.4",
