--- a/fe-react/package.json
+++ b/fe-react/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-transition-group": "^4.4.5",
     "dayjs": "^1.11.7",
+    "html-react-parser": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
