--- a/fe-react/package.json
+++ b/fe-react/package.json
@@ -62,6 +62,7 @@
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
@@ -72,6 +73,7 @@
     "eslint-plugin-unicorn": "^45.0.2",
     "husky": "^8.0.3",
     "postcss": "^8.4.20",
+    "prettier": "^3.4.2",
     "react-test-renderer": "^18.2.0",
     "redux-logger": "^3.0.6",
     "storybook-addon-react-router-v6": "^0.2.1",
