--- a/fe-react/package.json
+++ b/fe-react/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-unicorn": "^45.0.2",
+    "gh-pages": "^6.3.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.20",
     "prettier": "^3.4.2",
