changed page dir

--- a/fe-react/.github/gh-pages.yml
+++ b/fe-react/.github/gh-pages.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main # Trigger workflow on push to the main branch
+      - main # Trigger deployment on push to the main branch
 
 jobs:
   deploy:
@@ -20,16 +20,21 @@ jobs:
         with:
           node-version: 16 # Use Node.js 16 (adjust if needed)
 
-      # Step 3: Install dependencies and build
+      # Step 3: Navigate to the fe-react folder and install dependencies
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd fe-react
+          npm install
 
+      # Step 4: Build the React app
       - name: Build project
-        run: npm run build
+        run: |
+          cd fe-react
+          npm run build
 
-      # Step 4: Deploy to GitHub Pages
+      # Step 5: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build # Path to the build directory
+          publish_dir: ./fe-react/build # Path to the build directory
