Exclude ror directory

--- a/fe-react/.github/gh-pages.yml
+++ b/fe-react/.github/gh-pages.yml
@@ -22,8 +22,8 @@ jobs:
 
       # Step 3: Install dependencies and build the React project
       - name: Install and build fe-react
+        working-directory: ./fe-react # Ensure the workflow operates in the fe-react folder
         run: |
-          cd fe-react
           npm install
           npm run build
 
@@ -32,4 +32,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./fe-react/build
+          publish_dir: ./fe-react/build # Deploy only the build folder
