--- a/fe-react/.github/gh-pages.yml
+++ b/fe-react/.github/gh-pages.yml
@@ -32,4 +32,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./fe-react/build # Deploy only the build folder
+          publish_dir: ./fe-react/dist # Deploy only the build folder
