--- a/fe-react/package.json
+++ b/fe-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://lfelipemarin.github.io/hooked-up",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
