--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,36 +1,35 @@
-name: Deploy Vite Hooked Up to GitHub Pages
+name: Deploy fe-react to GitHub Pages
 
 on:
   push:
     branches:
-      - main # Trigger workflow on pushes to the main branch
+      - main # Trigger on pushes to the main branch
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       # Step 1: Checkout the repository
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       # Step 2: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16 # Adjust the version as needed
+          node-version: 16 # Use the Node.js version required for your project
 
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
+      # Step 3: Install dependencies and build the React project
+      - name: Install and build fe-react
+        working-directory: ./fe-react # Ensure the workflow operates in the fe-react folder
+        run: |
+          npm install
+          npm run build
 
-      # Step 4: Build the project
-      - name: Build the project
-        run: npm run build
-
-      # Step 5: Deploy to GitHub Pages
+      # Step 4: Deploy the build directory to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./fe-react/dist # Deploy only the build folder
