--- a/fe-react/package.json
+++ b/fe-react/package.json
@@ -3,10 +3,12 @@
   "description": "A simpe drag and drop CV Builder.",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "homepage": "https://lfelipemarin.github.io/hooked-up",
+  "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -28,7 +30,7 @@
     "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-transition-group": "^4.4.5",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.13",
     "html-react-parser": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
